--- a/OSMC/src/main/res/values-en/strings-en.xml
+++ b/OSMC/src/main/res/values-en/strings-en.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">Custom Maps</string>
+    <string name="app_name">OSM-CustomMaps</string>
     <string name="select_map_name">Select map</string>
     <string name="create_map_name">Create map</string>
     <string name="edit_prefs_name">Preferences</string>
-    <string name="author">By Marko Teittinen</string>
+    <string name="author">By Sam Davis</string>
     <string name="open_source">
-        Custom Maps app and its source code are published under Apache License, version 2.0.
+        OSM-CustomMaps app and its source code are published under Apache License, version 2.0.
     </string>
     <string name="apache_license">Read Apache License 2.0</string>
     <string name="google_code">Visit open source project website</string>
     <string name="app_home">Visit Custom Maps app website</string>
+
 
     <!-- CustomMaps.java -->
     <string name="gps_not_available">
@@ -26,7 +27,7 @@
     <string name="external_content_failed">Custom Maps failed to display the KMZ content.</string>
     <string name="waiting_for_gps">Current location unknown.\nSearching for GPS signal…</string>
     <string name="map_too_large">The selected map could not be loaded as it was too large.</string>
-    
+
     <!-- sharing -->
     <string name="share_message_subject">I would like to share a map with you</string>
     <string name="share_chooser_title">Send map with…</string>
@@ -34,20 +35,20 @@
     <!-- safety warning -->
     <string name="safety_warning_title">IMPORTANT!</string>
     <string name="safety_warning">
-        Many map images that can be used with Custom Maps are not drawn accurately enough to show
+        Many map images that can be used with OSM Custom Maps are not drawn accurately enough to show
         exact GPS locations. Displayed location should be considered approximate at all times.
         \n\nEven within a single map some areas may be better aligned with GPS than others.
     </string>
     <string name="remind_me_again">Remind me again next time</string>
-    
+
     <!-- select map -->
     <string name="select_map_to_use">Select map to use</string>
     <string name="no_maps_found_on_sd">
-        No maps found on SD card in CustomMaps folder.\n\nUse menu to create maps and to get help 
+        No maps found on SD card in CustomMaps folder.\n\nUse menu to create maps and to get help
         finding them.\n\nOr press \'back\' to exit.
     </string>
     <string name="create_map_help">
-        Use menu to create maps from photos or from downloaded map images.\n\nTap and hold a map 
+        Use menu to create maps from photos or from downloaded map images.\n\nTap and hold a map
         name to modify or delete it.
     </string>
     <string name="create_map_help_link">
@@ -84,15 +85,15 @@
     <string name="download_info">
         Please wait until the download completes or cancel download with the button below
     </string>
-    
+
     <!-- map image display -->
     <string name="unnamed_map">Untitled map</string>
     <string name="map_image_load_failed">Failed to load map image for %s.</string>
-    
+
     <!-- help manager -->
     <string name="help_menu_title">Help</string>
     <string name="help_redisplay">You can redisplay this info using the menu</string>
-    
+
     <!-- details display -->
     <string name="latitude">Latitude</string>
     <string name="longitude">Longitude</string>
@@ -101,7 +102,7 @@
     <string name="speed">Speed</string>
     <string name="accuracy">Accuracy</string>
     <string name="no_data_available">N/A</string>
-    
+
     <!-- map image selection -->
     <string name="select_image_help">
         Select a file containing a map image.\n\nOnly use images for which you have permission.\n
@@ -115,16 +116,16 @@
 
     <!-- map image point selection -->
     <string name="image_point_help">
-        Select a point to be located on a Google map.\n\nSelect points far apart for best 
+        Select a point to be located on a Google map.\n\nSelect points far apart for best
         results.\n\nAvoid selecting points between previous points.
     </string>
     <string name="image_point_no_image">No map image selected. Can\'t select points.</string>
     <string name="image_point_select_for_matching">Select point to be matched</string>
-    
+
     <!-- map geo point selection -->
     <string name="geo_point_help">
-        Zoom and pan Google map to match the center of the thumbnail.\n\nUse the sliders to rotate 
-        and scale the thumbnail, and to adjust its transparency.\n\nMap button toggles map view 
+        Zoom and pan the map to match the center of the thumbnail.\n\nUse the sliders to rotate
+        and scale the thumbnail, and to adjust its transparency.\n\nMap button toggles map view
         and satellite view.
     </string>
     <string name="geo_point_mapview_failure">
@@ -133,11 +134,11 @@
     <string name="geo_point_rotate">Rotate</string>
     <string name="geo_point_scale">Scale</string>
     <string name="geo_point_transparency">Transparency</string>
-    
+
     <!-- map editor -->
     <string name="editor_help">
-        Name your map and describe it for the map list.\n\nAdd 2-4 tiepoints to locate and scale 
-        the map image.\n\nAdjust or delete tiepoints by long pressing the entries.\n\nMaps can be 
+        Name your map and describe it for the map list.\n\nAdd 2-4 tiepoints to locate and scale
+        the map image.\n\nAdjust or delete tiepoints by long pressing the entries.\n\nMaps can be
         saved after preview.
     </string>
     <string name="editor_image_load_failed">Failed to load map image</string>
@@ -147,7 +148,7 @@
     <string name="editor_new_map">New Map</string>
     <string name="editor_description">Description</string>
     <string name="editor_tiepoints">Tiepoints</string>
-    
+
     <!-- map preview -->
     <string name="preview_help">
         Verify the alignment of the map image by zooming and panning the map.\n\nBack button allows
@@ -157,7 +158,7 @@
         Failed to create a MapView.\nMap preview is not available.
     </string>
     <string name="preview_transparency">Transparency</string>
-    
+
     <!-- edit preferences -->
     <string name="metric_title">Use metric units</string>
     <string name="metric_use_metric">Now using metric units</string>
@@ -182,21 +183,21 @@
     <string name="max_map_img_size_title">Maximum map image size</string>
     <string name="max_map_img_size">%.1f megapixels</string>
     <string name="about_custom_maps">About Custom Maps</string>
-    
+
     <!-- about dialog -->
     <string name="version_label">version</string>
     <string name="credits_text">
-        <b>Special thanks</b>
-        \n\u2022 Harlan Hile (pinch zoom, user location icon)
-        \n\u2022 Patrick Steiner (internationalization, German translation)
-        \n\u2022 Francesco Terribile (Italian translation)
-        \n\u2022 Dorin Hongu (Romanian translation)
-        \n\u2022 Germain Zouein (testing)
-        \n\u2022 Tomasz Kossakowski (Polish translation)
-        \n\u2022 Dmitry Kandin (Russian translation)
-        \n\u2022 Vladimira Šantek (Croatian translation)
+        <b>Sources</b>
+        \n\u2022 OSMDROID The open street map alternative to Google Maps.
+        \n\u2022 Original Custom Maps App by Marko Teittinen
+        \n\u2022
+        \n\u2022
+        \n\u2022
+        \n\u2022
+        \n\u2022
+        \n\u2022
     </string>
-    
+
     <!-- button items -->
     <string name="button_ok">OK</string>
     <string name="button_close">Close</string>
@@ -206,7 +207,7 @@
     <string name="button_add_point">Add point</string>
     <string name="button_preview">Preview</string>
     <string name="button_accept">Accept</string>
-    
+
     <!-- menu items -->
     <string name="select_map">Select map</string>
     <string name="my_location">My location</string>
