--- a/OSMC/src/main/res/layout/main.xml
+++ b/OSMC/src/main/res/layout/main.xml
@@ -20,6 +20,7 @@
         android:layout_above="@id/detailsDisplay"
         class="osm.custommaps.MapUpMapDisplay" />
 
+
     <view
         android:id="@+id/locationLayer"
         android:layout_width="fill_parent"
@@ -46,7 +47,8 @@
         android:paddingLeft="10dp"
         android:paddingRight="5dp"
         android:paddingTop="5dp"
-        android:src="@drawable/zoomout" />
+        android:src="@drawable/zoomout"
+        android:visibility="gone"/>
 
     <ImageButton
         android:id="@+id/zoomIn"
@@ -60,6 +62,7 @@
         android:paddingLeft="5dp"
         android:paddingRight="10dp"
         android:paddingTop="5dp"
-        android:src="@drawable/zoomin" />
+        android:src="@drawable/zoomin"
+        android:visibility="gone"/>
 
 </RelativeLayout>
