--- a/osmbonuspack-5.3/OSMNavigator/src/main/res/layout/map_menu.xml
+++ b/osmbonuspack-5.3/OSMNavigator/src/main/res/layout/map_menu.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:background="#f4f4f4">
     <item
         android:id="@+id/menu_departure"
         android:title="@string/menu_departure"/>
