--- a/OSMC/src/main/res/layout/kml_option_menu.xml
+++ b/OSMC/src/main/res/layout/kml_option_menu.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:orientation="horizontal">
 	<item
 		android:id="@+id/kml_option_menu_paste"
 		android:title="@string/kml_option_menu_paste"/>
