--- a/OSMC/src/main/res/layout/tiepoints.xml
+++ b/OSMC/src/main/res/layout/tiepoints.xml
@@ -18,14 +18,21 @@
             android:layout_height="fill_parent"
             android:gravity="center"
             android:inputType="none" />-->
-        <org.osmdroid.views.MapView
-            android:id="@+id/mapviewlocation"
+        <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:inputType="none"
-            android:gravity="center"
-            tilesource="Mapnik"
-            />
+            android:layout_height="fill_parent" >
+            <org.osmdroid.bonuspack.mapsforge.GenericMapView
+                android:id="@+id/mapviewlocation"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" />
+            <Button
+                android:id="@+id/buttonTrackingMode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/btn_tracking_off" />
+        </RelativeLayout>
     </FrameLayout>
 
     <LinearLayout
